Add note about GSON experimentation